fix(style): JSP first screen spacing

--- a/blocks/form/components/formhero/formhero.scss
+++ b/blocks/form/components/formhero/formhero.scss
@@ -12,7 +12,8 @@
     @include media('desktop') {
       flex-direction: row;
       justify-content: center;
-      gap: $spacing-400 0;
+      align-items: center;
+      gap: 0 $spacing-400;
     }
 
     legend {
